@@ -2,37 +2,38 @@ package com.maze.pathfinder;
 
 import com.maze.core.IPathFinder;
 import com.maze.model.*;
-import com.maze.util.GraphUtils;
+import com.maze.util.PathUtils;
+
 import java.util.*;
 
 /**
- * A* (A-Star) Search ile yol bulma.
+ * A* (A-Star) Search - TreeSet (Red-Black Tree) kullanarak
  *
- * Algoritma:
- * 1. f(n) = g(n) + h(n) hesapla
- *    - g(n): start'tan n'ye gerçek maliyet
- *    - h(n): n'den goal'a tahmini maliyet (heuristic)
- * 2. En düşük f değerli hücreyi seç
- * 3. Komşuları değerlendir ve güncelle
- * 4. Goal'a ulaşana kadar devam et
+ * Open Set:
+ *  - TreeSet<Cell>  -> O(log n) ekleme / silme
+ *  - Map<Position, Cell> -> hızlı erişim
  *
- * Özellikler:
- * - OPTIMAL: Admissible heuristic ile en kısa yolu bulur
- * - Informed search (heuristic kullanır)
- * - BFS'ten daha hızlı
- *
- * Time Complexity: O(E log V) - priority queue ile
+ * Time Complexity: O(E log V)
  * Space Complexity: O(V)
  */
 public class AStarPathFinder implements IPathFinder {
 
     /**
-     * Heuristic fonksiyon: Manhattan distance
+     * Manhattan Distance heuristic
      */
     private int heuristic(Position a, Position b) {
         return Math.abs(a.getRow() - b.getRow()) +
                 Math.abs(a.getCol() - b.getCol());
     }
+
+    /**
+     * TreeSet için comparator (tie-breaker)
+     */
+    private final Comparator<Cell> cellComparator =
+            Comparator.comparingInt(Cell::getFCost)
+                    .thenComparingInt(Cell::getHCost)
+                    .thenComparingInt(a -> a.getPosition().getRow())
+                    .thenComparingInt(a -> a.getPosition().getCol());
 
     @Override
     public Path findPath(Maze maze, Position start, Position end) {
@@ -40,10 +41,11 @@ public class AStarPathFinder implements IPathFinder {
         long startTime = System.currentTimeMillis();
         maze.resetCells();
 
-        PriorityQueue<Cell> openSet =
-                new PriorityQueue<>(Comparator.comparingInt(Cell::getFCost));
+        // Open Set (Red-Black Tree)
+        TreeSet<Cell> openSet = new TreeSet<>(cellComparator);
+        Map<Position, Cell> openMap = new HashMap<>();
 
-        Set<Position> openSetPos = new HashSet<>();
+        // Closed Set
         Set<Position> closedSet = new HashSet<>();
 
         Cell startCell = maze.getCell(start);
@@ -51,18 +53,19 @@ public class AStarPathFinder implements IPathFinder {
         startCell.setHCost(heuristic(start, end));
         startCell.setParent(null);
 
-        openSet.offer(startCell);
-        openSetPos.add(start);
+        openSet.add(startCell);
+        openMap.put(start, startCell);
 
         while (!openSet.isEmpty()) {
 
-            Cell current = openSet.poll();
+            // En düşük fCost'lu hücre
+            Cell current = openSet.pollFirst();
             Position currentPos = current.getPosition();
-            openSetPos.remove(currentPos);
+            openMap.remove(currentPos);
 
             if (currentPos.equals(end)) {
                 long endTime = System.currentTimeMillis();
-                Path path = GraphUtils.reconstructPath(current);
+                Path path = PathUtils.reconstructPath(current);
                 return new Path(
                         path.getPositions(),
                         current.getGCost(),
@@ -84,16 +87,17 @@ public class AStarPathFinder implements IPathFinder {
 
                 if (tentativeG < neighbor.getGCost()) {
 
+                    // Eğer openSet içindeyse eski halini çıkar
+                    if (openMap.containsKey(np)) {
+                        openSet.remove(neighbor);
+                    }
+
                     neighbor.setParent(current);
                     neighbor.setGCost(tentativeG);
                     neighbor.setHCost(heuristic(np, end));
 
-                    if (openSetPos.contains(np)) {
-                        openSet.remove(neighbor);
-                    }
-
-                    openSet.offer(neighbor);
-                    openSetPos.add(np);
+                    openSet.add(neighbor);
+                    openMap.put(np, neighbor);
                 }
             }
         }
@@ -102,9 +106,10 @@ public class AStarPathFinder implements IPathFinder {
         return new Path(new ArrayList<>(), 0, endTime - startTime);
     }
 
-
     @Override
-    public List<AlgorithmStep> findPathWithSteps(Maze maze, Position start, Position end) {
+    public List<AlgorithmStep> findPathWithSteps(
+            Maze maze, Position start, Position end) {
+
         List<AlgorithmStep> steps = new ArrayList<>();
 
         if (maze == null || start == null || end == null) {
@@ -113,9 +118,11 @@ public class AStarPathFinder implements IPathFinder {
 
         maze.resetCells();
 
-        PriorityQueue<Cell> openSet = new PriorityQueue<>(
-                Comparator.comparingInt(Cell::getFCost)
-        );
+        // Open Set (Red-Black Tree)
+        TreeSet<Cell> openSet = new TreeSet<>(cellComparator);
+        Map<Position, Cell> openMap = new HashMap<>();
+
+        // Closed Set
         Set<Position> closedSet = new HashSet<>();
 
         Cell startCell = maze.getCell(start);
@@ -123,73 +130,97 @@ public class AStarPathFinder implements IPathFinder {
         startCell.setHCost(heuristic(start, end));
         startCell.setParent(null);
 
-        openSet.offer(startCell);
+        openSet.add(startCell);
+        openMap.put(start, startCell);
 
         steps.add(new AlgorithmStep(
                 AlgorithmStep.StepType.VISIT,
                 start,
-                Arrays.asList(start),
-                "A* started at " + start + " (h=" + startCell.getHCost() + ")"
+                List.of(start),
+                "A* started at " + start +
+                        " (h=" + startCell.getHCost() + ")"
         ));
 
         int stepCount = 0;
 
         while (!openSet.isEmpty()) {
-            Cell current = openSet.poll();
+
+            // En düşük fCost'lu hücre
+            Cell current = openSet.pollFirst();
             Position currentPos = current.getPosition();
+            openMap.remove(currentPos);
 
             steps.add(new AlgorithmStep(
                     AlgorithmStep.StepType.EXPLORE,
                     currentPos,
                     new ArrayList<>(),
-                    String.format("Step %d: Exploring %s (g=%d, h=%d, f=%d)",
-                            ++stepCount, currentPos,
-                            current.getGCost(), current.getHCost(), current.getFCost())
+                    String.format(
+                            "Step %d: Exploring %s (g=%d, h=%d, f=%d)",
+                            ++stepCount,
+                            currentPos,
+                            current.getGCost(),
+                            current.getHCost(),
+                            current.getFCost()
+                    )
             ));
 
+            // Goal bulundu
             if (currentPos.equals(end)) {
-                Path path = GraphUtils.reconstructPath(current);
+                Path path = PathUtils.reconstructPath(current);
                 steps.add(new AlgorithmStep(
                         AlgorithmStep.StepType.COMPLETE,
                         end,
                         path.getPositions(),
-                        "Path found! Length: " + path.getLength() + ", Cost: " + current.getGCost()
+                        "Path found! Length: " +
+                                path.getLength() +
+                                ", Cost: " + current.getGCost()
                 ));
                 return steps;
             }
 
             closedSet.add(currentPos);
 
-            List<Cell> neighbors = maze.getNeighbors(currentPos);
-            for (Cell neighbor : neighbors) {
-                Position neighborPos = neighbor.getPosition();
+            for (Cell neighbor : maze.getNeighbors(currentPos)) {
 
-                if (!neighbor.isWalkable() || closedSet.contains(neighborPos)) {
+                Position np = neighbor.getPosition();
+
+                if (!neighbor.isWalkable() || closedSet.contains(np)) {
                     continue;
                 }
 
-                int tentativeGCost = current.getGCost() + 1;
+                int tentativeG = current.getGCost() + 1;
 
-                if (tentativeGCost < neighbor.getGCost()) {
-                    neighbor.setParent(current);
-                    neighbor.setGCost(tentativeGCost);
-                    neighbor.setHCost(heuristic(neighborPos, end));
+                if (tentativeG < neighbor.getGCost()) {
 
-                    if (!openSet.contains(neighbor)) {
-                        openSet.offer(neighbor);
-
-                        steps.add(new AlgorithmStep(
-                                AlgorithmStep.StepType.VISIT,
-                                neighborPos,
-                                new ArrayList<>(),
-                                String.format("Added to open set: %s (f=%d)",
-                                        neighborPos, neighbor.getFCost())
-                        ));
+                    // Eğer openSet'te varsa eski kaydı çıkar
+                    if (openMap.containsKey(np)) {
+                        openSet.remove(neighbor);
                     }
+
+                    neighbor.setParent(current);
+                    neighbor.setGCost(tentativeG);
+                    neighbor.setHCost(heuristic(np, end));
+
+                    openSet.add(neighbor);
+                    openMap.put(np, neighbor);
+
+                    steps.add(new AlgorithmStep(
+                            AlgorithmStep.StepType.VISIT,
+                            np,
+                            new ArrayList<>(),
+                            String.format(
+                                    "Added to open set: %s (g=%d, h=%d, f=%d)",
+                                    np,
+                                    neighbor.getGCost(),
+                                    neighbor.getHCost(),
+                                    neighbor.getFCost()
+                            )
+                    ));
                 }
             }
         }
 
+        // Yol bulunamadı
         steps.add(new AlgorithmStep(
                 AlgorithmStep.StepType.COMPLETE,
                 end,
@@ -200,48 +231,73 @@ public class AStarPathFinder implements IPathFinder {
         return steps;
     }
 
+
     @Override
-    public Path findPathMultiTarget(Maze maze, Position start, List<Position> targets) {
-        // A* için optimal multi-target routing (TSP-like)
+    public Path findPathMultiTarget(
+            Maze maze,
+            Position start,
+            List<Position> targets) {
+
+        if (maze == null || start == null ||
+                targets == null || targets.isEmpty()) {
+            return new Path(new ArrayList<>());
+        }
+
         List<Position> completePath = new ArrayList<>();
         completePath.add(start);
 
         Position current = start;
         Set<Position> visited = new HashSet<>();
 
-        // Her adımda en yakın hedefe git (greedy heuristic)
+        // Her adımda en yakın hedefe git (greedy)
         while (visited.size() < targets.size()) {
+
             Position nearest = null;
-            int minDistance = Integer.MAX_VALUE;
+            int minHeuristic = Integer.MAX_VALUE;
 
             for (Position target : targets) {
-                if (!visited.contains(target)) {
-                    int distance = heuristic(current, target);
-                    if (distance < minDistance) {
-                        minDistance = distance;
-                        nearest = target;
-                    }
+                if (visited.contains(target)) {
+                    continue;
+                }
+
+                int h = heuristic(current, target);
+                if (h < minHeuristic) {
+                    minHeuristic = h;
+                    nearest = target;
                 }
             }
 
-            if (nearest == null) break;
-
-            Path path = findPath(maze, current, nearest);
-            if (!path.isEmpty()) {
-                completePath.addAll(path.getPositions().subList(1, path.getLength()));
-                current = nearest;
-                visited.add(nearest);
-            } else {
+            // Gidilecek hedef kalmadı
+            if (nearest == null) {
                 break;
             }
+
+            // TreeSet tabanlı A* çağrısı
+            Path segment = findPath(maze, current, nearest);
+
+            // Yol yoksa tüm çözüm başarısız
+            if (segment.isEmpty()) {
+                return new Path(new ArrayList<>());
+            }
+
+            // İlk pozisyonu (current) tekrar eklememek için subList
+            List<Position> segmentPositions = segment.getPositions();
+            completePath.addAll(
+                    segmentPositions.subList(1, segmentPositions.size())
+            );
+
+            current = nearest;
+            visited.add(nearest);
         }
 
         return new Path(completePath);
     }
 
+
+
     @Override
     public String getAlgorithmName() {
-        return "A* Search (A-Star)";
+        return "A* Search";
     }
 
     @Override
